--- a/src/composer.json
+++ b/src/composer.json
@@ -15,12 +15,12 @@
     "slim/php-view": "^2.0",
     "monolog/monolog": "^1.17",
     "friendsofphp/php-cs-fixer": "^2.4",
-    "squizlabs/php_codesniffer": "*",
-    "peridot-php/peridot": "^1.19",
-    "codeception/codeception": "2.3.5"
+    "squizlabs/php_codesniffer": "*"
   },
   "require-dev": {
-    "phpunit/php-token-stream": "1.4.11"
+    "codeception/codeception": "*",
+    "phpunit/php-token-stream": "1.4.11",
+    "codeception/c3": "*"
   },
   "autoload": {
     "psr-4": { "": "src/" }
